--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -1009,6 +1009,8 @@
  glp_save_edit_events.PROVMODIFADDA071:0 "Add backlash of nurael sugestion"
  glp_save_edit_events.PROVMODIFADDA072:0 "Add local manpower +50%"
  glp_save_edit_events.PROVMODIFADDA073:0 "Add oiled orcs"
+ glp_save_edit_events.PROVMODIFADDA074:0 "Add province hostile speed"
+ glp_save_edit_events.PROVMODIFADDA075:0 "Add global flag volacano"
  
  glp_save_edit_events.EVTNAME44:0 "Removing a modifier"
  glp_save_edit_events.EVTDESC44:0 "Removing a modifier from the province of [From.GetName]"
@@ -1084,7 +1086,9 @@
  glp_save_edit_events.PROVMODIFREMOVEA070:0 "Remove missionary strenght boost"
  glp_save_edit_events.PROVMODIFREMOVEA071:0 "Remove backlash of nurael sugestion"
  glp_save_edit_events.PROVMODIFREMOVEA072:0 "Remove local manpower +50%"
- glp_save_edit_events.PROVMODIFREMOVEA073:0 "Remove Oiled orc"
+ glp_save_edit_events.PROVMODIFREMOVEA073:0 "Remove Oiled Orc"
+ glp_save_edit_events.PROVMODIFREMOVEA074:0 "Remove -70% hostile movement speed"
+
 
  glp_gm_events.EVTNAME5:0 "A §Ggreen§! opportunity"
  glp_gm_events.EVTDESC5:0 "[Root.Monarch.GetTitle]! A slave trade is booming after the victory of the greentide. Slavery has been pronounced as the main punishment for the orcs. Slaves are flowing the markets it's perfect opportunity to have a cheep labor or a fancy orcish slave at the house for almost nothing !"
@@ -1099,6 +1103,37 @@
  glp_gm_events.EVTNAME7:0 "The orcish slave aftermath"
  glp_gm_events.EVTDESC7:0 "After an intensive blobbing of Escann, the orcish abundance is no more ! We have made the choice of not relying on this horrible trade. Now we see other countries have a big issue with the over dependance on the orcish slavery."
  glp_gm_events.EVTSEPCULATIONB03:0 "We can laugh on them !"
+
+ glp_gm_events.EVTNAME8:0 "A Loud Explosion"
+ glp_gm_events.EVTDESC8:0 "The Dragon Coast volcano erupts with catastrophic force, covering the sky in thick grey clouds and raining ash across the land. The sun vanishes behind a veil of smoke."
+ glp_gm_events.EVTOPTA8:0 "The Ashen Sky is back!"
+
+ glp_gm_events.EVTNAME9:0 "Aftermath of the Dragon Coast Eruption"
+ glp_gm_events.EVTDESC9:0 "Ten years have passed since the great eruption. The sky remains a dull grey, harvests struggle, and a generation has grown without ever seeing a clear summer."
+ glp_gm_events.EVTOPTA9:0 "The ash still falls..."
+
+ glp_gm_events.EVTNAME10:0 "Twenty Years of Ash"
+ glp_gm_events.EVTDESC10:0 "Two decades under the ashen sky have hardened our people. The air is still thick, winters are longer, and famine lingers at the edges of the realm."
+ glp_gm_events.EVTOPTA10:0 "We endure."
+
+ glp_gm_events.EVTNAME11:0 "A Darkened Generation"
+ glp_gm_events.EVTDESC11:0 "Thirty years after the eruption, few remember the world as it once was. Children are born beneath grey heavens, and stories of blue skies sound like myths."
+ glp_gm_events.EVTOPTA11:0 "Was the sky ever blue?"
+
+ glp_gm_events.EVTNAME12:0 "Forty Years Without Sun"
+ glp_gm_events.EVTDESC12:0 "Four decades have passed. Crops have adapted, cities endure, yet the sun remains a pale memory behind endless clouds of ash."
+ glp_gm_events.EVTOPTA12:0 "We have learned to live in shadow."
+
+ glp_gm_events.EVTNAME13:0 "The Ashen Sky Fades"
+ glp_gm_events.EVTDESC13:0 "Fifty years after the eruption, the clouds finally begin to thin. Rays of sunlight pierce the grey veil. For the first time in half a century, the sky remembers its color."
+ glp_gm_events.EVTOPTA13:0 "The sun returns."
+
+
+
+
+
+ glp_save_edit_events.PROVMODIFREMOVEA072:0 "Remove local manpower +50%"
+ glp_save_edit_events.PROVMODIFREMOVEA073:0 "Remove Oiled orc"
 
  glp_save_edit_events.EVTNAME71:0 "[From.GetName] Create Building"
  glp_save_edit_events.EVTDESC71:0 "Decide what kind of buildings you want in [From.GetName]"
