--- a/3362815204/localisation/GLP_l_french.yml
+++ b/3362815204/localisation/GLP_l_french.yml
@@ -1029,6 +1029,30 @@
  glp_save_edit_events.EVTNAME71:0 "Créer un bâtiment dans [From.GetName]"
  glp_save_edit_events.EVTDESC71:0 "Décidez quel type de bâtiments vous voulez dans [From.GetName]."
  glp_save_edit_events.EVTBATZZ1:0 "Laissez tomber"
+
+  glp_gm_events.EVTNAME8:0 "Une Puissante Explosion"
+  glp_gm_events.EVTDESC8:0 "Le volcan de la Côte du Dragon entre en éruption avec une force cataclysmique, couvrant le ciel d'épais nuages gris et faisant pleuvoir des cendres sur tout le pays. Le soleil disparaît derrière un voile de fumée."
+  glp_gm_events.EVTOPTA8:0 "Le Ciel Cendré est de retour !"
+
+  glp_gm_events.EVTNAME9:0 "Conséquences de l'Éruption de la Côte du Dragon"
+  glp_gm_events.EVTDESC9:0 "Dix années ont passé depuis la grande éruption. Le ciel reste d’un gris terne, les récoltes peinent, et une génération entière a grandi sans connaître un été clair."
+  glp_gm_events.EVTOPTA9:0 "Les cendres tombent encore..."
+
+  glp_gm_events.EVTNAME10:0 "Vingt Ans de Cendres"
+  glp_gm_events.EVTDESC10:0 "Deux décennies sous le ciel cendré ont endurci notre peuple. L’air demeure lourd, les hivers s’allongent, et la famine rôde aux frontières du royaume."
+  glp_gm_events.EVTOPTA10:0 "Nous tenons bon."
+
+  glp_gm_events.EVTNAME11:0 "Une Génération dans l’Ombre"
+  glp_gm_events.EVTDESC11:0 "Trente ans après l’éruption, rares sont ceux qui se souviennent du monde d’autrefois. Les enfants naissent sous un ciel gris, et les récits d’un ciel bleu semblent n’être que des légendes."
+  glp_gm_events.EVTOPTA11:0 "Le ciel fut-il jamais bleu ?"
+
+  glp_gm_events.EVTNAME12:0 "Quarante Ans Sans Soleil"
+  glp_gm_events.EVTDESC12:0 "Quatre décennies se sont écoulées. Les cultures se sont adaptées, les cités survivent, mais le soleil demeure un souvenir pâle derrière d’infinis nuages de cendre."
+  glp_gm_events.EVTOPTA12:0 "Nous avons appris à vivre dans l’ombre."
+
+  glp_gm_events.EVTNAME13:0 "La Fin du Ciel Cendré"
+  glp_gm_events.EVTDESC13:0 "Cinquante ans après l’éruption, les nuages commencent enfin à se dissiper. Des rayons de soleil percent le voile gris. Pour la première fois en un demi-siècle, le ciel retrouve sa couleur."
+  glp_gm_events.EVTOPTA13:0 "Le soleil revient."
  
  glp_save_edit_events.EVTBATA01:0 "Créer un bâtiment économique dans [From.GetName]"
  glp_save_edit_events.EVTNAME72:0 "Menu de §Gcréation§! de bâtiment économique"
