Temp maj no test

--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -803,78 +803,88 @@
  glp_save_edit_events.EVTREBELA09:0 "Spawn Human Racists Rebels"
  glp_save_edit_events.EVTREBELA10:0 "Spawn Corinite Rebels"
  glp_save_edit_events.EVTREBELA11:0 "Spawn Regent Court Rebels"
+ glp_save_edit_events.EVTREBELA12:0 "Spawn buffed Uelos Rebels"
 
  glp_save_edit_events.EVTNAMEA37:0 "Size of the Rebel stack"
  glp_save_edit_events.EVTDESCA37:0 "Chose the size of the Rebel stack /n Number of regiments = (5+0.1*dev of the province)*(1+0.03 * tech level)*§RRebel stack§!"
  glp_save_edit_events.EVTREBELSIZEAZZ1:0 "Nevermind"
  glp_save_edit_events.EVTREBELSIZEAA01:0 "Stack size 1"
  glp_save_edit_events.EVTREBELSIZEAA02:0 "Stack size 2"
- glp_save_edit_events.EVTREBELSIZEAA03:0 "Stack size 5"
- glp_save_edit_events.EVTREBELSIZEAA04:0 "Stack size 10"
- glp_save_edit_events.EVTREBELSIZEAA05:0 "Stack size 25"
+ glp_save_edit_events.EVTREBELSIZEAA03:0 "Stack size 3"
+ glp_save_edit_events.EVTREBELSIZEAA04:0 "Stack size 4"
+ glp_save_edit_events.EVTREBELSIZEAA05:0 "Stack size 5"
 
  glp_save_edit_events.EVTNAMEB37:0 "Size of the Rebel stack"
  glp_save_edit_events.EVTDESCB37:0 "Chose the size of the Rebel stack /n Number of regiments = (5+0.1*dev of the province)*(1+0.03 * tech level)*§RRebel stack§!"
  glp_save_edit_events.EVTREBELSIZEBZZ1:0 "Nevermind"
  glp_save_edit_events.EVTREBELSIZEBA01:0 "Stack size 1"
  glp_save_edit_events.EVTREBELSIZEBA02:0 "Stack size 2"
- glp_save_edit_events.EVTREBELSIZEBA03:0 "Stack size 5"
- glp_save_edit_events.EVTREBELSIZEBA04:0 "Stack size 10"
- glp_save_edit_events.EVTREBELSIZEBA05:0 "Stack size 25"
+ glp_save_edit_events.EVTREBELSIZEBA03:0 "Stack size 3"
+ glp_save_edit_events.EVTREBELSIZEBA04:0 "Stack size 4"
+ glp_save_edit_events.EVTREBELSIZEBA05:0 "Stack size 5"
 
  glp_save_edit_events.EVTNAMEC37:0 "Size of the Rebel stack"
  glp_save_edit_events.EVTDESCC37:0 "Chose the size of the Rebel stack /n Number of regiments = (5+0.1*dev of the province)*(1+0.03 * tech level)*§RRebel stack§!"
  glp_save_edit_events.EVTREBELSIZECZZ1:0 "Nevermind"
  glp_save_edit_events.EVTREBELSIZECA01:0 "Stack size 1"
  glp_save_edit_events.EVTREBELSIZECA02:0 "Stack size 2"
- glp_save_edit_events.EVTREBELSIZECA03:0 "Stack size 5"
- glp_save_edit_events.EVTREBELSIZECA04:0 "Stack size 10"
- glp_save_edit_events.EVTREBELSIZECA05:0 "Stack size 25"
+ glp_save_edit_events.EVTREBELSIZECA03:0 "Stack size 3"
+ glp_save_edit_events.EVTREBELSIZECA04:0 "Stack size 4"
+ glp_save_edit_events.EVTREBELSIZECA05:0 "Stack size 5"
 
  glp_save_edit_events.EVTNAMED37:0 "Size of the Rebel stack"
  glp_save_edit_events.EVTDESCD37:0 "Chose the size of the Rebel stack /n Number of regiments = (5+0.1*dev of the province)*(1+0.03 * tech level)*§RRebel stack§!"
  glp_save_edit_events.EVTREBELSIZEDZZ1:0 "Nevermind"
  glp_save_edit_events.EVTREBELSIZEDA01:0 "Stack size 1"
  glp_save_edit_events.EVTREBELSIZEDA02:0 "Stack size 2"
- glp_save_edit_events.EVTREBELSIZEDA03:0 "Stack size 5"
- glp_save_edit_events.EVTREBELSIZEDA04:0 "Stack size 10"
- glp_save_edit_events.EVTREBELSIZEDA05:0 "Stack size 25"
+ glp_save_edit_events.EVTREBELSIZEDA03:0 "Stack size 3"
+ glp_save_edit_events.EVTREBELSIZEDA04:0 "Stack size 4"
+ glp_save_edit_events.EVTREBELSIZEDA05:0 "Stack size 5"
 
  glp_save_edit_events.EVTNAMEE37:0 "Size of the Rebel stack"
  glp_save_edit_events.EVTDESCE37:0 "Chose the size of the Rebel stack /n Number of regiments = (5+0.1*dev of the province)*(1+0.03 * tech level)*§RRebel stack§!"
  glp_save_edit_events.EVTREBELSIZEEZZ1:0 "Nevermind"
  glp_save_edit_events.EVTREBELSIZEEA01:0 "Stack size 1"
  glp_save_edit_events.EVTREBELSIZEEA02:0 "Stack size 2"
- glp_save_edit_events.EVTREBELSIZEEA03:0 "Stack size 5"
- glp_save_edit_events.EVTREBELSIZEEA04:0 "Stack size 10"
- glp_save_edit_events.EVTREBELSIZEEA05:0 "Stack size 25"
+ glp_save_edit_events.EVTREBELSIZEEA03:0 "Stack size 3"
+ glp_save_edit_events.EVTREBELSIZEEA04:0 "Stack size 4"
+ glp_save_edit_events.EVTREBELSIZEEA05:0 "Stack size 5"
 
  glp_save_edit_events.EVTNAMEF37:0 "Size of the Rebel stack"
  glp_save_edit_events.EVTDESCF37:0 "Chose the size of the Rebel stack /n Number of regiments = (5+0.1*dev of the province)*(1+0.03 * tech level)*§RRebel stack§!"
  glp_save_edit_events.EVTREBELSIZEFZZ1:0 "Nevermind"
  glp_save_edit_events.EVTREBELSIZEFA01:0 "Stack size 1"
  glp_save_edit_events.EVTREBELSIZEFA02:0 "Stack size 2"
- glp_save_edit_events.EVTREBELSIZEFA03:0 "Stack size 5"
- glp_save_edit_events.EVTREBELSIZEFA04:0 "Stack size 10"
- glp_save_edit_events.EVTREBELSIZEFA05:0 "Stack size 25"
+ glp_save_edit_events.EVTREBELSIZEFA03:0 "Stack size 3"
+ glp_save_edit_events.EVTREBELSIZEFA04:0 "Stack size 4"
+ glp_save_edit_events.EVTREBELSIZEFA05:0 "Stack size 5"
 
  glp_save_edit_events.EVTNAMEH37:0 "Size of the Rebel stack"
  glp_save_edit_events.EVTDESCH37:0 "Chose the size of the Rebel stack /n Number of regiments = (5+0.1*dev of the province)*(1+0.03 * tech level)*§RRebel stack§!"
  glp_save_edit_events.EVTREBELSIZEHZZ1:0 "Nevermind"
  glp_save_edit_events.EVTREBELSIZEHA01:0 "Stack size 1"
  glp_save_edit_events.EVTREBELSIZEHA02:0 "Stack size 2"
- glp_save_edit_events.EVTREBELSIZEHA03:0 "Stack size 5"
- glp_save_edit_events.EVTREBELSIZEHA04:0 "Stack size 10"
- glp_save_edit_events.EVTREBELSIZEHA05:0 "Stack size 25"
+ glp_save_edit_events.EVTREBELSIZEHA03:0 "Stack size 3"
+ glp_save_edit_events.EVTREBELSIZEHA04:0 "Stack size 4"
+ glp_save_edit_events.EVTREBELSIZEHA05:0 "Stack size 5"
 
  glp_save_edit_events.EVTNAMEI37:0 "Size of the Rebel stack"
  glp_save_edit_events.EVTDESCI37:0 "Chose the size of the Rebel stack /n Number of regiments = (5+0.1*dev of the province)*(1+0.03 * tech level)*§RRebel stack§!"
  glp_save_edit_events.EVTREBELSIZEIZZ1:0 "Nevermind"
  glp_save_edit_events.EVTREBELSIZEIA01:0 "Stack size 1"
  glp_save_edit_events.EVTREBELSIZEIA02:0 "Stack size 2"
- glp_save_edit_events.EVTREBELSIZEIA03:0 "Stack size 5"
- glp_save_edit_events.EVTREBELSIZEIA04:0 "Stack size 10"
- glp_save_edit_events.EVTREBELSIZEIA05:0 "Stack size 25"
+ glp_save_edit_events.EVTREBELSIZEIA03:0 "Stack size 3"
+ glp_save_edit_events.EVTREBELSIZEIA04:0 "Stack size 4"
+ glp_save_edit_events.EVTREBELSIZEIA05:0 "Stack size 5"
+
+ glp_save_edit_events.EVTNAMEI37:0 "Size of the Rebel stack"
+ glp_save_edit_events.EVTDESCI37:0 "Chose the size of the Rebel stack /n Number of regiments = (5+0.1*dev of the province)*(1+0.03 * tech level)*§RRebel stack§!"
+ glp_save_edit_events.EVTREBELSIZEJZZ1:0 "Nevermind"
+ glp_save_edit_events.EVTREBELSIZEJA01:0 "Stack size 1"
+ glp_save_edit_events.EVTREBELSIZEJA02:0 "Stack size 2"
+ glp_save_edit_events.EVTREBELSIZEJA03:0 "Stack size 3"
+ glp_save_edit_events.EVTREBELSIZEJA04:0 "Stack size 4"
+ glp_save_edit_events.EVTREBELSIZEJA05:0 "Stack size 5"
 
  glp_save_edit_events.EVTNAME40: "Magical event for country [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC40:0 "As a master of all magic, change thier fate for magic."
