--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -786,6 +786,8 @@
  glp_save_edit_events.EVTMJEVTA01TT:0 "This event grant a temporary boost for 35 years for thoses who choose to join the embrace the slave speculation the aftermath is pricey..."
  glp_save_edit_events.EVTMJEVTA02:0 "Event of fish price"
  glp_save_edit_events.EVTMJEVTA02TT:0 "Un peu de saumon ragnar, Salakis au bon lait de brebis"
+ glp_save_edit_events.EVTMJEVTA03:0 "Event of volcano explosion"
+ glp_save_edit_events.EVTMJEVTA03TT:0 "Ca fout cannor dans la merde basiquement"
  glp_slave_speculation_bonus_modifier:0 "On the orcish slave market"
  glp_slave_speculation_malus_modifier:0 "Outside of the orcish slave market"
 
@@ -1021,7 +1023,9 @@
  glp_save_edit_events.PROVMODIFADDA073:0 "Add oiled orcs"
  glp_save_edit_events.PROVMODIFADDA074:0 "Add province hostile speed"
  glp_save_edit_events.PROVMODIFADDA075:0 "Add global flag volacano"
- 
+ glp_save_edit_events.PROVMODIFADDA076:0 "Add imperial authority +0.1"
+ glp_save_edit_events.PROVMODIFADDA077:0 "Add No prod here"
+
  glp_save_edit_events.EVTNAME44:0 "Removing a modifier"
  glp_save_edit_events.EVTDESC44:0 "Removing a modifier from the province of [From.GetName]"
  glp_save_edit_events.PROVMODIFREMOVEZZ1:0 "Never mind"
@@ -1098,6 +1102,8 @@
  glp_save_edit_events.PROVMODIFREMOVEA072:0 "Remove local manpower +50%"
  glp_save_edit_events.PROVMODIFREMOVEA073:0 "Remove Oiled Orc"
  glp_save_edit_events.PROVMODIFREMOVEA074:0 "Remove -70% hostile movement speed"
+ glp_save_edit_events.PROVMODIFREMOVEA076:0 "Remove imperial authority +0.1"
+ glp_save_edit_events.PROVMODIFREMOVEA077:0 "Remove No prod here"
 
 
  glp_gm_events.EVTNAME5:0 "A §Ggreen§! opportunity"
@@ -1846,7 +1852,8 @@ glp_zeal_milcorisa:0 "Boost missionaire"
 glp_backlach_of_nurael_sugestion:0 "Conséquances de la suggestion de nurael"
 glp_local_manpower_bonus:0 "Plus de manpower"
 glp_orc_oil:0 "Les orcs huilés"
-
+glp_adianse_tu_fais_chier:0 "Triple religion accepté dans l'empire. Apparement c'est acté par l'empereur lui même"
+glp_no_prod_damestear:0 "Pas de production ici"
 
  A1A:0 "MJ"
  A2A:0 "CoMJ"
